code reformat and optimization